second basic commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-placeholder -- content coming 2019
+<head>
+    <title>Austin Byrne</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
+<body>
+    <h1>Welcome</h1>
+    <p>placeholder -- content coming 2019</p>
+</body>
