--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
+<!DOCTYPE html>
+<html>
 <head>
     <title>Austin Byrne</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
-
 <body>
-    <h1>Welcome</h1>
-    <p>placeholder -- content coming 2019</p>
+    <header>
+        <h1>Welcome</h1>
+        <p>placeholder -- content coming 2019</p>
+    </header>
+
+    <main>
+        <p>random text</p>
+    </main>
 </body>
+</html>
+
